funcionalidad off canvas para shopping cart, arregle la UI y funcion add to Cart

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Festive&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;500;700&display=swap");
 .seccion-productos {
   padding-top: 2%;
@@ -65,7 +66,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #4e3107de;
+  --bs-primary: #462f22;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -73,7 +74,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 78, 49, 7;
+  --bs-primary-rgb: 70, 47, 34;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -265,11 +266,11 @@ sup {
 }
 
 a {
-  color: #4e3107de;
+  color: #462f22;
   text-decoration: underline;
 }
 a:hover {
-  color: rgba(59, 37, 5, 0.8964705882);
+  color: #38261b;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -2048,15 +2049,15 @@ progress {
 }
 
 .table-primary {
-  --bs-table-bg: rgba(226, 222, 215, 0.9741176471);
-  --bs-table-striped-bg: rgba(214, 210, 204, 0.9754117647);
+  --bs-table-bg: #dad5d3;
+  --bs-table-striped-bg: #cfcac8;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: rgba(202, 199, 192, 0.9767058824);
+  --bs-table-active-bg: #c4c0be;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: rgba(208, 205, 198, 0.9760588235);
+  --bs-table-hover-bg: #cac5c3;
   --bs-table-hover-color: #000;
   color: #000;
-  border-color: rgba(202, 199, 192, 0.9767058824);
+  border-color: #c4c0be;
 }
 
 .table-secondary {
@@ -2237,9 +2238,9 @@ progress {
 .form-control:focus {
   color: #212529;
   background-color: #fff;
-  border-color: rgba(178, 165, 147, 0.9352941176);
+  border-color: #a39791;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(78, 49, 7, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(70, 47, 34, 0.25);
 }
 .form-control::-webkit-date-and-time-value {
   height: 1.5em;
@@ -2399,9 +2400,9 @@ textarea.form-control-lg {
   }
 }
 .form-select:focus {
-  border-color: rgba(178, 165, 147, 0.9352941176);
+  border-color: #a39791;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(78, 49, 7, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(70, 47, 34, 0.25);
 }
 .form-select[multiple], .form-select[size]:not([size="1"]) {
   padding-right: 0.75rem;
@@ -2463,13 +2464,13 @@ textarea.form-control-lg {
   filter: brightness(90%);
 }
 .form-check-input:focus {
-  border-color: rgba(178, 165, 147, 0.9352941176);
+  border-color: #a39791;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(78, 49, 7, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(70, 47, 34, 0.25);
 }
 .form-check-input:checked {
-  background-color: #4e3107de;
-  border-color: #4e3107de;
+  background-color: #462f22;
+  border-color: #462f22;
 }
 .form-check-input:checked[type=checkbox] {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e");
@@ -2478,8 +2479,8 @@ textarea.form-control-lg {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: #4e3107de;
-  border-color: #4e3107de;
+  background-color: #462f22;
+  border-color: #462f22;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -2508,7 +2509,7 @@ textarea.form-control-lg {
   }
 }
 .form-switch .form-check-input:focus {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%28178, 165, 147, 0.9352941176%29'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23a39791'/%3e%3c/svg%3e");
 }
 .form-switch .form-check-input:checked {
   background-position: right center;
@@ -2542,10 +2543,10 @@ textarea.form-control-lg {
   outline: 0;
 }
 .form-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(78, 49, 7, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(70, 47, 34, 0.25);
 }
 .form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(78, 49, 7, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(70, 47, 34, 0.25);
 }
 .form-range::-moz-focus-outer {
   border: 0;
@@ -2554,7 +2555,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #4e3107de;
+  background-color: #462f22;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2566,7 +2567,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-webkit-slider-thumb:active {
-  background-color: rgba(211, 204, 193, 0.9611764706);
+  background-color: #c8c1bd;
 }
 .form-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -2580,7 +2581,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #4e3107de;
+  background-color: #462f22;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2592,7 +2593,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-moz-range-thumb:active {
-  background-color: rgba(211, 204, 193, 0.9611764706);
+  background-color: #c8c1bd;
 }
 .form-range::-moz-range-track {
   width: 100%;
@@ -2951,7 +2952,7 @@ textarea.form-control-lg {
 }
 .btn-check:focus + .btn, .btn:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(78, 49, 7, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(70, 47, 34, 0.25);
 }
 .btn:disabled, .btn.disabled, fieldset:disabled .btn {
   pointer-events: none;
@@ -2960,32 +2961,32 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #fff;
-  background-color: #4e3107de;
-  border-color: #4e3107de;
+  background-color: #462f22;
+  border-color: #462f22;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: rgba(63, 40, 6, 0.89);
-  border-color: rgba(59, 37, 5, 0.8964705882);
+  background-color: #3c281d;
+  border-color: #38261b;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
   color: #fff;
-  background-color: rgba(63, 40, 6, 0.89);
-  border-color: rgba(59, 37, 5, 0.8964705882);
-  box-shadow: 0 0 0 0.25rem rgba(111, 87, 53, 0.5);
+  background-color: #3c281d;
+  border-color: #38261b;
+  box-shadow: 0 0 0 0.25rem rgba(98, 78, 67, 0.5);
 }
 .btn-check:checked + .btn-primary, .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: rgba(59, 37, 5, 0.8964705882);
-  border-color: rgba(54, 34, 5, 0.9029411765);
+  background-color: #38261b;
+  border-color: #35231a;
 }
 .btn-check:checked + .btn-primary:focus, .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem rgba(111, 87, 53, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(98, 78, 67, 0.5);
 }
 .btn-primary:disabled, .btn-primary.disabled {
   color: #fff;
-  background-color: #4e3107de;
-  border-color: #4e3107de;
+  background-color: #462f22;
+  border-color: #462f22;
 }
 
 .btn-secondary {
@@ -3199,27 +3200,27 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-  color: #4e3107de;
-  border-color: #4e3107de;
+  color: #462f22;
+  border-color: #462f22;
 }
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #4e3107de;
-  border-color: #4e3107de;
+  background-color: #462f22;
+  border-color: #462f22;
 }
 .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
-  box-shadow: 0 0 0 0.25rem rgba(78, 49, 7, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(70, 47, 34, 0.5);
 }
 .btn-check:checked + .btn-outline-primary, .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
   color: #fff;
-  background-color: #4e3107de;
-  border-color: #4e3107de;
+  background-color: #462f22;
+  border-color: #462f22;
 }
 .btn-check:checked + .btn-outline-primary:focus, .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(78, 49, 7, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(70, 47, 34, 0.5);
 }
 .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-  color: #4e3107de;
+  color: #462f22;
   background-color: transparent;
 }
 
@@ -3400,11 +3401,11 @@ textarea.form-control-lg {
 
 .btn-link {
   font-weight: 400;
-  color: #4e3107de;
+  color: #462f22;
   text-decoration: underline;
 }
 .btn-link:hover {
-  color: rgba(59, 37, 5, 0.8964705882);
+  color: #38261b;
 }
 .btn-link:disabled, .btn-link.disabled {
   color: #6c757d;
@@ -3709,7 +3710,7 @@ textarea.form-control-lg {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #4e3107de;
+  background-color: #462f22;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #adb5bd;
@@ -3750,7 +3751,7 @@ textarea.form-control-lg {
 }
 .dropdown-menu-dark .dropdown-item.active, .dropdown-menu-dark .dropdown-item:active {
   color: #fff;
-  background-color: #4e3107de;
+  background-color: #462f22;
 }
 .dropdown-menu-dark .dropdown-item.disabled, .dropdown-menu-dark .dropdown-item:disabled {
   color: #adb5bd;
@@ -3872,7 +3873,7 @@ textarea.form-control-lg {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #4e3107de;
+  color: #462f22;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -3882,7 +3883,7 @@ textarea.form-control-lg {
   }
 }
 .nav-link:hover, .nav-link:focus {
-  color: rgba(59, 37, 5, 0.8964705882);
+  color: #38261b;
 }
 .nav-link.disabled {
   color: #6c757d;
@@ -3929,7 +3930,7 @@ textarea.form-control-lg {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #4e3107de;
+  background-color: #462f22;
 }
 
 .nav-fill > .nav-link,
@@ -4403,16 +4404,16 @@ textarea.form-control-lg {
 }
 
 .navbar-dark .navbar-brand {
-  color: #a52a2a;
+  color: #462f22;
 }
 .navbar-dark .navbar-brand:hover, .navbar-dark .navbar-brand:focus {
-  color: #fff;
+  color: #462f22a6;
 }
 .navbar-dark .navbar-nav .nav-link {
-  color: #ffa500;
+  color: #462f22;
 }
 .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
-  color: rgba(255, 255, 255, 0.75);
+  color: #462f22a6;
 }
 .navbar-dark .navbar-nav .nav-link.disabled {
   color: rgba(255, 255, 255, 0.25);
@@ -4422,14 +4423,14 @@ textarea.form-control-lg {
   color: #fff;
 }
 .navbar-dark .navbar-toggler {
-  color: #ffa500;
+  color: #462f22;
   border-color: rgba(255, 255, 255, 0.1);
 }
 .navbar-dark .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='%23ffa500' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='%23462f22' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 .navbar-dark .navbar-text {
-  color: #ffa500;
+  color: #462f22;
 }
 .navbar-dark .navbar-text a,
 .navbar-dark .navbar-text a:hover,
@@ -4616,12 +4617,12 @@ textarea.form-control-lg {
   }
 }
 .accordion-button:not(.collapsed) {
-  color: rgba(68, 43, 6, 0.8835294118);
-  background-color: rgba(241, 239, 235, 0.9870588235);
+  color: #3f2a1f;
+  background-color: #edeae9;
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125);
 }
 .accordion-button:not(.collapsed)::after {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='rgba%2868, 43, 6, 0.8835294118%29'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%233f2a1f'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
   transform: rotate(-180deg);
 }
 .accordion-button::after {
@@ -4645,9 +4646,9 @@ textarea.form-control-lg {
 }
 .accordion-button:focus {
   z-index: 3;
-  border-color: rgba(178, 165, 147, 0.9352941176);
+  border-color: #a39791;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(78, 49, 7, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(70, 47, 34, 0.25);
 }
 
 .accordion-header {
@@ -4734,7 +4735,7 @@ textarea.form-control-lg {
 .page-link {
   position: relative;
   display: block;
-  color: #4e3107de;
+  color: #462f22;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #dee2e6;
@@ -4747,16 +4748,16 @@ textarea.form-control-lg {
 }
 .page-link:hover {
   z-index: 2;
-  color: rgba(59, 37, 5, 0.8964705882);
+  color: #38261b;
   background-color: #e9ecef;
   border-color: #dee2e6;
 }
 .page-link:focus {
   z-index: 3;
-  color: rgba(59, 37, 5, 0.8964705882);
+  color: #38261b;
   background-color: #e9ecef;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(78, 49, 7, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(70, 47, 34, 0.25);
 }
 
 .page-item:not(:first-child) .page-link {
@@ -4765,8 +4766,8 @@ textarea.form-control-lg {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #4e3107de;
-  border-color: #4e3107de;
+  background-color: #462f22;
+  border-color: #462f22;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -4863,12 +4864,12 @@ textarea.form-control-lg {
 }
 
 .alert-primary {
-  color: rgba(42, 26, 4, 0.9223529412);
-  background-color: rgba(226, 222, 215, 0.9741176471);
-  border-color: rgba(211, 204, 193, 0.9611764706);
+  color: #2a1c14;
+  background-color: #dad5d3;
+  border-color: #c8c1bd;
 }
 .alert-primary .alert-link {
-  color: rgba(33, 20, 3, 0.9378823529);
+  color: #221610;
 }
 
 .alert-secondary {
@@ -4956,7 +4957,7 @@ textarea.form-control-lg {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #4e3107de;
+  background-color: #462f22;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -5037,8 +5038,8 @@ textarea.form-control-lg {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #4e3107de;
-  border-color: #4e3107de;
+  background-color: #462f22;
+  border-color: #462f22;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -5202,17 +5203,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-primary {
-  color: rgba(42, 26, 4, 0.9223529412);
-  background-color: rgba(226, 222, 215, 0.9741176471);
+  color: #2a1c14;
+  background-color: #dad5d3;
 }
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: rgba(42, 26, 4, 0.9223529412);
-  background-color: rgba(202, 199, 192, 0.9767058824);
+  color: #2a1c14;
+  background-color: #c4c0be;
 }
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: rgba(42, 26, 4, 0.9223529412);
-  border-color: rgba(42, 26, 4, 0.9223529412);
+  background-color: #2a1c14;
+  border-color: #2a1c14;
 }
 
 .list-group-item-secondary {
@@ -5331,7 +5332,7 @@ textarea.form-control-lg {
 }
 .btn-close:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(78, 49, 7, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(70, 47, 34, 0.25);
   opacity: 1;
 }
 .btn-close:disabled, .btn-close.disabled {
@@ -6313,10 +6314,10 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-  color: #4e3107de;
+  color: #462f22;
 }
 .link-primary:hover, .link-primary:focus {
-  color: rgba(59, 37, 5, 0.8964705882);
+  color: #38261b;
 }
 
 .link-secondary {
@@ -6759,7 +6760,7 @@ textarea.form-control-lg {
 }
 
 .border-primary {
-  border-color: #4e3107de !important;
+  border-color: #462f22 !important;
 }
 
 .border-secondary {
@@ -11174,7 +11175,13 @@ textarea.form-control-lg {
   width: 100vw;
 }
 
-.navbar-brand,
+.navbar-brand {
+  display: flex;
+  align-items: center;
+  font-size: 3rem;
+  font-family: "Festive", cursive;
+}
+
 .navbar-container-custom {
   font-size: 1.5rem;
 }
@@ -11190,16 +11197,22 @@ textarea.form-control-lg {
   justify-content: center;
 }
 #cart-navBar #cart-icon .cart-count-circle {
+  display: flex;
   position: relative;
   transform: translate(-50%, -50%);
-  top: 1.2rem;
+  top: 1.5rem;
   right: 5%;
-  text-align: center;
-  font-size: 1.1rem;
-  width: 1.1rem;
-  height: 1.1rem;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  width: 1.3rem;
+  height: 1.3rem;
   border-radius: 50%;
-  background-color: #a52a2a;
+  background-color: #c9925b;
+}
+
+.logo {
+  height: 5rem;
 }
 
 body {
