--- a/scss/_partials/_cards.scss
+++ b/scss/_partials/_cards.scss
@@ -67,4 +67,9 @@
   &:hover {
     transform: translate(0, -1%);
   }
+  a {
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-weight: 700;
+  }
 }
