--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Festive&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;500;700&display=swap");
 .seccion-productos {
@@ -46,13 +47,45 @@
 }
 
 .shopping-cart__item {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 100;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 2% 0;
 }
 .shopping-cart__item--image {
-  width: 4rem;
+  width: 20%;
   height: auto;
+}
+.shopping-cart__item--container {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  background-color: rgba(128, 128, 128, 0.207);
+}
+.shopping-cart__item--container .name {
+  margin-bottom: 0;
+  width: 40%;
+  text-align: center;
+}
+.shopping-cart__item--container .information {
+  display: flex;
+  width: 40%;
+  justify-content: space-evenly;
+}
+
+.detail,
+.name {
+  text-align: center;
+  font-size: 1rem;
+  margin-bottom: 0;
+}
+
+.btn-remove-item {
+  padding: 0 !important;
+  width: 1.2rem !important;
+  height: 1.2rem;
 }
 
 /*!
