--- a/scss/sections/_shoppingCart.scss
+++ b/scss/sections/_shoppingCart.scss
@@ -1,9 +1,45 @@
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;500;700&display=swap");
+
 .shopping-cart__item {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 100;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 2% 0;
   &--image {
-    width: 4rem;
+    width: 20%;
+
     height: auto;
   }
+  &--container {
+    width: 90%;
+    display: flex;
+    align-items: center;
+    background-color: rgba(128, 128, 128, 0.207);
+
+    .name {
+      margin-bottom: 0;
+      width: 40%;
+      text-align: center;
+    }
+    .information {
+      display: flex;
+      width: 40%;
+      justify-content: space-evenly;
+    }
+  }
+}
+
+.detail,
+.name {
+  text-align: center;
+  font-size: 1rem;
+  margin-bottom: 0;
+}
+.btn-remove-item {
+  padding: 0 !important;
+  width: 1.2rem !important;
+  height: 1.2rem;
 }
