--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -15,5 +15,6 @@ $bg-dark: blue;
 
 //Start Color
 $primary: #462f22;
+$secondary: #c5894d;
 //End Color
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
