--- a/scss/sections/_shoppingCart.scss
+++ b/scss/sections/_shoppingCart.scss
@@ -1,7 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;500;700&display=swap");
 
+.shoppingCart {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 2rem;
+}
+
 .shopping-cart__item {
   font-family: "Josefin Sans", sans-serif;
+  font-size: 1.5rem;
   font-weight: 100;
 
   display: flex;
@@ -28,6 +34,12 @@
       display: flex;
       width: 40%;
       justify-content: space-evenly;
+      #cant-items-cart {
+        width: 60%;
+      }
+      #precio-items-total {
+        width: 40%;
+      }
     }
   }
 }
@@ -42,4 +54,27 @@
   padding: 0 !important;
   width: 1.2rem !important;
   height: 1.2rem;
+}
+
+.total-shopping-cart {
+  margin: 0 0 0 1rem;
+  padding: 0 2rem 0 0;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px black solid;
+
+  h3 {
+    font-family: "Josefin Sans", sans-serif;
+    font-weight: 400;
+    font-size: 1.3rem;
+  }
+  .total-to-pay {
+    display: flex;
+    justify-content: center;
+    width: 16%;
+    h3 {
+      text-align: center;
+    }
+  }
 }
