--- a/scss/sections/_productos.scss
+++ b/scss/sections/_productos.scss
@@ -2,7 +2,7 @@
   padding-top: 2%;
 
   #almuerzo {
-    background-image: url(/assets/img/cagliari.jpeg);
+    background-image: url(../assets/img/cagliari.jpeg);
   }
   #desayuno {
     background-image: url(/assets/img/avocado_toast.jpeg);
