--- a/scss/sections/_productos.scss
+++ b/scss/sections/_productos.scss
@@ -2,10 +2,11 @@
   padding-top: 2%;
 
   #almuerzo {
-    background-image: url(../../assets/img/avocado_toast.jpeg);
+    background-image: url(./JSProyectoFinal/assets/img/Nosotros.jpeg);
   }
   #desayuno {
-    background-image: url(/JSProyectoFinal/assets/img/Nosotros.jpeg);
+    background-image: url(./JSProyectoFinal/assets/img/Nosotros.jpeg);
+    background-image: url("./JSProyectoFinal/assets/img/Nosotros.jpeg");
   }
 
   #cena {
