--- a/scss/sections/_productos.scss
+++ b/scss/sections/_productos.scss
@@ -2,11 +2,10 @@
   padding-top: 2%;
 
   #almuerzo {
-    background-image: url(./JSProyectoFinal/assets/img/Nosotros.jpeg);
+    background-image: url(https://github.com/Bayzon88/JSProyectoFinal/blob/final/assets/img/avocado_toast.jpeg);
   }
   #desayuno {
-    background-image: url(./JSProyectoFinal/assets/img/Nosotros.jpeg);
-    background-image: url("./JSProyectoFinal/assets/img/Nosotros.jpeg");
+    background-image: url(https://raw.githubusercontent.com/Bayzon88/JSProyectoFinal/final/assets/img/cagliari.jpeg);
   }
 
   #cena {
